styles.css
body{
    
    font-size: 1.3rem;
    background-color: #942b39;
}

#animalimages
{
    max-width: 1000px !important;
    height: auto;
    margin: auto;
}


.carouselImage{
    margin:auto;
}

#myCarousel{
    background-color: #333333;
    margin-bottom: 1em;
}

.carousel img 
{
    width: auto;
    height: 100%;
    max-width: 100%;
    margin: auto;

    object-fit: cover;

    position: absolute;   
    left: 50%;
    transform: translateX(-50%);
}

.carousel-item
{
    height: 500px;
}

.custom-carousel-text
{
    padding: 10px;
    background: linear-gradient(rgba(0,0,0,0.0), rgba(0,0,0,0.4),  rgba(0,0,0,0.5));
    bottom: 0;
    width: 100%;
    left:0;
    padding-left: 10%;
    padding-right: 10%;
}

.custom-carousel-indicators
{
    margin-bottom:0px;
}

.bg-RSSRed{
    background-color: #ff556c !important;
}

.bg-DarkRed{
    background-color: #942b39 !important;
}

.text-RSSRed{
    color: #ff556c !important;
}

.text-RSSRed a{
    color: #ff556c !important;
}

.text-Black{
    color: #000 !important;
}

.text-Black a{
    color: #000 !important;
}

.text-White{
    color: #fff !important;
}

.text-Black a{
    color: #fff !important;
}

.bg-white{
    background-color: white !important;
}


#SocialMediaArea{
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto;
    margin-top: 50px;
    padding-left: 20px;
    padding-right: 20px;
    margin-bottom: 80px;
    color: #fff;
}

#SocialMediaArea a{
    color: #fff;
}

.SocialMediaBox{
    width: 21.25%;
    height: auto;
    float: left;
    margin-right: 5%;
    margin-bottom: 40px;
    margin-top: 20px;
    text-align: center;
    background-color: #fff;
    padding: 10px;
    border-radius: 5px;
    color: #000;
}

.SocialMediaBox p{
    height:27px;
    text-align: center;
    font-size: 100%;
    line-height: 50px;
}

.rightobject{
    margin-right: 0px !important;
}

.SocialMediaImage{
    width: 100%;
    height: auto;
    border-radius: 5PX;
}

.navbar-dark .navbar-toggler{
    border: none;
    color: white;
}

.Banner
{
    width: 100%;
    height: 250px;
}

.Banner img
{
    width: 100%;
    height: 250px;
    object-fit: cover;
}

.Footer{
    width: 100%;
    background-color:rgba(0, 0, 0, 0.1);
    bottom: 0px;
    height: 100px;
    margin-top: 30px;
    text-align: center;
    padding-top: 39px;
    color: #fff;
    font-size: 20px;
}

.navbarShadow{
    box-shadow: 0px 0px 5px 0px black;
}

#ReadySetSumo
{
    width: 100%;
    height: 1250px;
    max-width: 1000px;
    margin-left: auto;
    margin-right: auto; 
    color: white;
    font-size: 20px;
}

#TwitterFeed{
    float: left;
    width: 60%;
    height: 600px;
    padding: 10px;
    background-color: #fff;
    border-radius: 5px;
    padding-bottom: -0px;
    box-shadow: 0px 0px 5px 0px #000;
}

#GameLogo {
    float: center;
    width: 60%;
    margin-left: 20%;
    margin-right: 20%;
    height: auto;
}

.AnimalImage{
    width: 100%;
    float: left;
}

.OneByTwoAnimalTable{
    margin-top:50px; 
    width: 20%; 
    float: left; 
    padding-top: 20px;
    border-spacing: 0px;
    border-collapse: separate;
}

.Blog{
    max-width: 1000px;
    height: auto;
    background-color: rgba(0, 0, 0, 0.1);
    margin-left:auto;
    margin-right:auto;
    margin-top:50px;
    padding-top: 20px;
    padding-bottom: 20px;
    border-radius: 5px; 
}

.blog-post{
    font-size: 16px;
}

.BlogPostPreview{
    width: 100%;
    height: 400px;
    background-color: rgba(255, 255, 255, 0.5)
}

